--- a/lab2/css/lab.css
+++ b/lab2/css/lab.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Raleway';
-    background-image: url("../img/flowerfield.png");
+    background-image: url("../img/sunsetsea.png");
 	background-attachment: fixed;
 	background-position: center;
 }
